--- a/app/src/main/res/xml/accessibility_service_config.xml
+++ b/app/src/main/res/xml/accessibility_service_config.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <accessibility-service xmlns:android="http://schemas.android.com/apk/res/android"
     android:description="@string/accessibility_service_description"
-    android:packageNames="com.harang.touchmacro"
     android:accessibilityEventTypes="typeAllMask"
     android:accessibilityFlags="flagDefault"
     android:accessibilityFeedbackType="feedbackAllMask"
@@ -9,4 +8,6 @@
     android:canRetrieveWindowContent="true"
     android:settingsActivity="com.harang.touchmacro.MainActivity"
     android:canRequestTouchExplorationMode="true"
+    android:canPerformGestures="true"
+    android:canTakeScreenshot="true"
 />
