--- a/app/src/main/res/layout/customview.xml
+++ b/app/src/main/res/layout/customview.xml
@@ -5,10 +5,16 @@
     android:layout_height="200dp">
 
     <TextView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:text="Text"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="Up"
         android:textSize="40sp"
         android:background="@color/purple_200"/>
 
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="Down"
+        android:textSize="40sp"
+        android:background="@color/purple_200"/>
 </LinearLayout>
