--- a/app/src/main/res/xml/accessibility_service_config.xml
+++ b/app/src/main/res/xml/accessibility_service_config.xml
@@ -6,7 +6,7 @@
     android:accessibilityFeedbackType="feedbackAllMask"
     android:notificationTimeout="100"
     android:canRetrieveWindowContent="true"
-    android:settingsActivity="com.harang.touchmacro.MainActivity"
+    android:settingsActivity="com.harang.touchassistant.MainActivity"
     android:canRequestTouchExplorationMode="true"
     android:canPerformGestures="true"
     android:canTakeScreenshot="true"
